feature parrallax done in fonctionnal programming

--- a/index.html
+++ b/index.html
@@ -12,31 +12,29 @@
   </head>
   <body>
     <main>
-      <div class="nav-container">
-        <nav>
-          <div class="navigation-container">
-            <div class="menu" id="menu">
-              <button id="close-menu">
-                <img src="./assets/close.png" alt="" />
-              </button>
-              <ul>
-                <li><a href="">le côté lumineux</a></li>
-                <li><a href="">le côté obscur</a></li>
-                <li><a href="">l'empire</a></li>
-                <li><a href="">les drôides</a></li>
-                <li><a href="">les ewoks</a></li>
-                <li><a href="">jabba le huit</a></li>
-              </ul>
-            </div>
-            <button class="open-menu" id="open-menu">
-              <img src="./assets/menu.png" alt="ouvrir le menu" />
+      <nav id="nav">
+        <div class="navigation-container">
+          <div class="menu" id="menu">
+            <button id="close-menu">
+              <img src="./assets/close.png" alt="" />
             </button>
+            <ul>
+              <li><a href="">le côté lumineux</a></li>
+              <li><a href="">le côté obscur</a></li>
+              <li><a href="">l'empire</a></li>
+              <li><a href="">les drôides</a></li>
+              <li><a href="">les ewoks</a></li>
+              <li><a href="">jabba le huit</a></li>
+            </ul>
           </div>
-          <div class="logo-container">
-            <img class="logo" src="./assets/header.png" alt="" />
-          </div>
-        </nav>
-      </div>
+          <button class="open-menu" id="open-menu">
+            <img src="./assets/menu.png" alt="ouvrir le menu" />
+          </button>
+        </div>
+        <div class="logo-container">
+          <img class="logo" id="logo" src="./assets/header.png" alt="" />
+        </div>
+      </nav>
 
       <section class="section-1">
         <div class="text-img">
