fix: all animations done in POO + minor css fix

--- a/index.html
+++ b/index.html
@@ -139,13 +139,9 @@
           </div>
         </div>
         <div class="part-two">
-          <picture>
-            <source
-              media="(min-width:768px)"
-              srcset="./assets/stormtroopers-2x.jpg"
-            />
-            <img src="./assets/stormtroopers.jpg" alt="kilokren" />
-          </picture>
+          <div class="bg-stormtroopers-container">
+            <div class="bg-stormtroopers"></div>
+          </div>
           <ul>
             <li>
               - Il fait appel à des références connues et appréciées des jeunes
@@ -213,6 +209,6 @@
         </div>
       </footer>
     </main>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
