fix: adding favicon

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- 
-        - use of js script in head tag to stop CSS transition from firing on page load
-        - use of defer for performance due to script tag inside head tag
-    -->
+    <link rel="icon" href="./assets/ad.ico" />
+
     <link rel="stylesheet" href="main.css" />
     <title>StarWars</title>
   </head>
