fix transition bug on load mobile menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css" />
     <title>StarWars</title>
   </head>
-  <body>
+  <body class="clean-transition">
     <main>
       <nav id="nav">
         <div class="navigation-container">
